# obs-shadertastic

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COC.md  README.md  buildspec.json  installer.iss.in  resource.rc.in
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/: FetchOnnxruntime.cmake  FetchOpenCV.cmake
data/effects/: fallback_effect.hlsl  transition_fallback.hlsl
data/effects/burn/: main.hlsl  meta.json
data/effects/filters/: fallback_effect.hlsl
data/effects/filters/displacement_map_source/: main.hlsl  meta.json
data/effects/filters/face_detection_distort/: main.hlsl  meta.json
data/effects/filters/face_detection_laser_eyes/: main.hlsl  meta.json
data/effects/filters/face_detection_ref/: main.hlsl  meta.json
data/effects/filters/gaussianblur/: main.hlsl  meta.json
data/effects/filters/pixelate/: main.hlsl  meta.json
data/effects/filters/rainbow/: main.hlsl  meta.json
data/effects/filters/shake/: main.hlsl  meta.json
data/effects/filters/template/: main.hlsl  meta.json
data/effects/filters/vignette/: main.hlsl  meta.json
data/effects/gaussianblur/: main.hlsl  meta.json
data/effects/pixelate/: main.hlsl  meta.json
data/effects/template/: main.hlsl  meta.json
data/effects/transitions/burn/: main.hlsl  meta.json
data/effects/transitions/displace/: main.hlsl  meta.json
data/effects/transitions/frost_slide/: main.hlsl  meta.json
data/effects/transitions/gaussianblur/: main.hlsl  meta.json
data/effects/transitions/inkdrop/: main.hlsl  meta.json
data/effects/transitions/pixelate/: main.hlsl  meta.json
data/effects/transitions/template/: main.hlsl  meta.json
data/face_detection_models/: face_detection_full_range.onnx  face_detection_short_range.onnx
data/locale/: en-US.ini  es-ES.ini
devtools/docker-tf2onnx/: Dockerfile  INSTRUCTIONS.md
doc/: generate-code-signing.md
onnxmediapipe/include/onnxmediapipe/: common.h  face_detection.h  face_landmarks.h  face_mesh.h  landmark_refinement_indices.h  pose.h  pose_detection.h  pose_landmark.h  ssd_anchors.h
onnxmediapipe/src/: common.cpp  face_detection.cpp  face_landmarks.cpp  face_mesh.cpp  pose.cpp.disabled  pose_detection.cpp.disabled  pose_landmark.cpp.disabled  ssd_anchors.cpp
onnxmediapipe/src/filtering/: low_pass_filter.cpp.disabled  low_pass_filter.h.disabled  one_euro_filter.cpp.disabled  one_euro_filter.h.disabled
ovmediapipe/src/: face_landmarks.cpp  pose_landmark.cpp
src/: effect.hpp  face_detection.hpp  face_detection_state.h  fdebug.cpp  fdebug.h  fdebug.hpp  list_files.hpp  logging_functions.hpp  params_list.hpp  shader_filter.hpp  shader_transition.hpp  shadertastic.cpp  shadertastic.hpp  string_util.hpp  transition_effect.hpp  twitch_util.h  version.h.in
src/parameters/: parameter.hpp  parameter_audiolevel.hpp  parameter_bool.hpp  parameter_color_alpha.hpp  parameter_datatype.hpp  parameter_double.hpp  parameter_factory.hpp  parameter_float.hpp  parameter_image.hpp  parameter_int.hpp  parameter_list_int.hpp  parameter_source.hpp  parameter_text.hpp  parameter_unknown.hpp
src/shader/: shader.cpp  shader.h  shader.hpp  shaders_library.hpp
src/util/: compare_nocase.hpp  debug_util.hpp  enum_util.hpp  file_util.cpp  file_util.h  file_util.hpp  rgba_to_rgb.h  stb_image_write.h  string_util.cpp  string_util.h  string_util.hpp  time_util.hpp
